--- a/main.html
+++ b/main.html
@@ -10,6 +10,13 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<div class="container">
+		<h1>Testimonials</h1>
+		<p class="text"> Devestimonial section </p>
+		<p class="author">raju ranjan</p>
+		<p class="text"> Devestimonial section </p>
+		<p class="author">raju ranjan</p>
+	</div>
 
 </body>
 
