--- a/main.html
+++ b/main.html
@@ -10,14 +10,19 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<div>
 	<div class="container">
 		<h1>Testimonials</h1>
+		<div class="testimonial">
 		<p class="text"> Devestimonial section </p>
 		<p class="author">raju ranjan</p>
+		</div>
+		<div class="testimonial">
 		<p class="text"> Devestimonial section </p>
 		<p class="author">raju ranjan</p>
+		</div>
 	</div>
-
+	</div>
 </body>
 
 </html>
