--- a/main.html
+++ b/main.html
@@ -10,17 +10,17 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<div>
 	<div class="container">
+	
 		<h1>Testimonials</h1>
 		<div class="testimonial">
 		<p class="text"> Devestimonial section </p>
 		<p class="author">raju ranjan</p>
-		</div>
+		</div><br>
 		<div class="testimonial">
 		<p class="text"> Devestimonial section </p>
 		<p class="author">raju ranjan</p>
-		</div>
+		
 	</div>
 	</div>
 </body>
